--- a/lab#1_KNN.ipynb
+++ b/lab#1_KNN.ipynb
@@ -125,7 +125,7 @@
     "params = {\n",
     "    'n_neighbors': range(17,20),\n",
     "    'weights': ['uniform',\n",
-    "                #  'distance'\n",
+    "                'distance'\n",
     "                 ],\n",
     "    'algorithm':['ball_tree', 'kd_tree'],\n",
     "    'p': range(1,4),\n",
