--- a/lab#3_LReg.ipynb
+++ b/lab#3_LReg.ipynb
@@ -7,7 +7,7 @@
     "# Лабораторная работа №3\n",
     "\n",
     "Задания:\n",
-    "1. Провести классификацию найденного датасета, методом машины опорных векторов. В формате Markdown писать пояснения. Объяснить почему были выбраны именно такие гиперпараметры, была ли перекрестная проверка, и т.д.\n",
+    "1. Провести классификацию найденного датасета, методами линеной и логистической регрессий. В формате Markdown писать пояснения. Объяснить почему были выбраны именно такие гиперпараметры, была ли перекрестная проверка, и т.д.\n",
     "\n",
     "<table>\n",
     "<tr><th>Название столбца</th><th>Описание</th></tr>\n",
